--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "microcms-js-sdk": "^3.2.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -21,6 +22,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
+    "eslint-config-prettier": "^10.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
