--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "microcms-js-sdk": "^3.2.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
